css/blocks.scss
/** === !Blocks === */

// !Includes
@import "../stylesheets/variables/index";
@import "../stylesheets/inc/index";

// !Block sizing & positioning

.alignfull {
	max-width: $x-grid-column-8;
	width: 100%;
}

.entry-content {
	
	@include media( tablet ) {
		.alignwide {
			position: relative;
			width: $x-space-column-12;
			transform: translateX( -50% );
			max-width: calc( 100vw - 2 * 1em );
			margin-top: 1em;
			margin-bottom: 1em;
			left: 50%;
		}

		.alignfull {
			position: relative;
			transform: translateX( -50% );
			width: 100vw;
			max-width: 100vw;
			margin-top: 1em;
			margin-bottom: 1em;
			left: 50%;
		}
	}

	.aligncenter {
		margin: 1em auto;
		width: 100%;
	}

	.alignleft {
		float: left;
		margin-right: $x-space-md;
		margin-bottom: $x-space-sm;
	}

	.alignright {
		float: right;
		margin-left: $x-space-md;
		margin-bottom: $x-space-sm;
	}
	
}

// !Block Color Palette Colors

.has-background {
	padding: $x-space-sm;
}

.has-purple-color {
	color: $x-color-accent-base;
}

.has-purple-background-color {
	background-color: $x-color-accent-base;
}

.has-light-gray-color {
	color: $x-color-border-base;
}

.has-light-gray-background-color {
	background-color: $x-color-border-base;
}

.has-medium-gray-color {
	color: $x-color-primary-base;
}

.has-medium-gray-background-color {
	background-color: $x-color-primary-base;
}

.has-dark-gray-color {
	color: $x-color-secondary-base;
}

.has-dark-gray-background-color {
	background-color: $x-color-secondary-base;
}


// !Buttons

.wp-block-file .wp-block-file__button,
.wp-block-button .wp-block-button__link{

	background-color: $x-color-accent-base;
	color: $x-color-shade-white;
	padding: $x-space-xxs $x-space-xs;
	font-size: $x-font-size-sm;
	line-height: $x-font-leading-body;
	letter-spacing: $x-font-letter-spacing;
	@include rounded( 3px );
	border: 0;
	cursor: pointer;
	display: inline-block;
	font-weight: 600;
	text-decoration: none;
	text-transform: uppercase;
	vertical-align: middle;

	&:hover {
		background-color: $x-color-accent-light;
	}

	&:active,
	&:focus {
		background-color: $x-color-accent-light;
	}

	@include media( tablet ) {
		padding: $x-space-xs $x-space-sm;
	}
}

// !Audio

.wp-block-audio {

	audio {
		width: 100%;
	}

	&.alignleft audio,
	&.alignright audio {

		width: 285px; // replace with css-variable

		@include media( tablet ) {
			width: $x-grid-column-3;
		}
	}
}

// !Video

.wp-block-video video {
//  max-width: 636px;
}

// !Image

.wp-block-image {
	
	img {

		display: block;

		&.alignleft,
		&.alignright {
			max-width: 100%;
		}

			&.alignfull img {
			width: 100vw;
			margin-left: auto;
			margin-right: auto;
		}
	}
	
	.alignleft,
	.aligncenter,
	.alignright {
		figcaption,
		.wp-caption-text {
			margin-top: 0.8em;
		}
	}
	
}

// !Cover image

.wp-block-cover-image {
	width: inherit;

	@include media( tablet ) {
		width: 100%;
	}
	
	&.alignleft, &.alignright {
		width: auto;
	}

	&.alignleft {
		margin-top: 0;
		margin-right: $x-space-md;
	}

	&.alignright {
		margin-top: 0;
		margin-left: $x-space-md;
	}

	.wp-block-cover-image-text,
	h2 {
		font-weight: 400;
		padding: $x-space-md;
		font-family: $x-font-family-body;
		line-height: $x-font-leading-heading;
		letter-spacing: normal;
		text-transform: none;
		margin: 0;
	}

	&.has-background-dim:before {
		// Not yet
	}
}

[data-align=left] .wp-block-cover-image,
[data-align=right] .wp-block-cover-image {

	max-width: 285px;

	@include media( tablet ) {
		max-width: $x-grid-column-3;
	}
}

// !Block Captions

.wp-caption .wp-caption-text,
.wp-block-audio figcaption,
.wp-block-video figcaption,
.wp-block-image figcaption,
.wp-block-gallery .blocks-gallery-image figcaption,
.wp-block-gallery .blocks-gallery-item figcaption,
.wp-block-quote .wp-block-quote__citation,
.wp-block-pullquote .wp-block-pullquote__citation,
.wp-block-pullquote cite {
	color: $x-color-words-subtle;
	font-size: $x-font-size-sm;
	font-family: $x-font-family-heading;
	padding: $x-space-xxs 0;
	font-style: normal;
	text-align: left;
	text-transform: none;
	margin: 0;
}

.wp-block-audio.alignfull figcaption,
.wp-block-video.alignfull figcaption,
.wp-block-image.alignfull figcaption,
.wp-block-gallery.alignfull .blocks-gallery-image figcaption,
.wp-block-gallery.alignfull .blocks-gallery-item figcaption {
	padding: $x-space-xs $x-space-sm;

	a { 
		color: $x-color-shade-white;
	}
}

.wp-block-gallery .blocks-gallery-image figcaption, 
.wp-block-gallery .blocks-gallery-item figcaption {
	color: $x-color-shade-white;
}

// !Columns

.wp-block-text-columns,
.wp-block-columns {

	justify-content: space-between;

	&.has-2-columns .wp-block-column {
		width: calc( 50% - ( $x-space-gutter * .5 ) );
	}

	&.has-3-columns .wp-block-column {
		width: calc( 33% - ( $x-space-gutter * .33 ) );
	}

	&.has-4-columns .wp-block-column {
		width: calc( 25% - ( $x-space-gutter * .25 ) );
	}

}

// !Categories & Archives

.wp-block-categories,
.wp-block-archives,
.wp-block-latest-posts {
	@include media( tablet ) {
		padding-left: $x-space-lg;
		padding-right: $x-space-lg;
	}
}

.wp-block-categories,
ul.wp-block-archives,
ul.wp-block-latest-posts,
ol.wp-block-latest-comments {

	li {
		font-size: $x-font-size-base;
		&:nth-child(n+2) {
			margin-top: 0.15em;
		}

		&:before {
			font-size: $x-font-size-xxs;
			line-height: 2.4em;
		}
	}

	li li {
		font-size: 1em;
	}

	&.is-grid {
		justify-content: space-between;

		li {
			margin-right: 0;
			margin-bottom: $x-space-sm;
		}
	}

	@include media( tablet ) {
		&.columns-2 li {
			width: calc( 50% - ( $x-grid-gutter * .5) );
		}
	}
}
ol.wp-block-latest-comments {
	
	> li:before {
		content: '';
	}

	li {
		padding-left: 0;

		@include media(tablet) {
			padding-left: $x-space-md;
		}			
	}
}

.wp-block-latest-comments__comment-excerpt {
	p {
		font-size: inherit;
	}
}

// !Tables
.entry-content table,
.wp-block-table {

	overflow-x: auto;

	td,
	th {
		padding: .5em;
		text-align: left;
	}

	tr:nth-child(even) {
		background-color: $x-color-shade-gray-2;
	}

	thead tr:nth-child(odd) {
		background-color: $x-color-primary-bg;
	}
}

.entry-content table,
.wp-block-table table,
table.wp-block-table {

	border-collapse: collapse;
//	max-width: calc( 100% - ( $x-space-sm * 2 ) );

	@include media( tablet ) {
//		max-width: $x-grid-column-7;
	}
}

// !Embeds

.wp-block-embed iframe {
	width: 100%;
}

.wp-block-embed > *,
.wp-block-embed > .jetpack-video-wrapper > * {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.wp-block-embed.type-video > .wp-block-embed__wrapper {
	position: relative;
	width: 100%;
	height: 0;
	padding-top: 56.25%;
}

.wp-block-embed.type-video > .wp-block-embed__wrapper > iframe {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
}

// !Blockquotes & Pull quotes

.wp-block-quote {

	#page & {
		margin-top: $x-space-lg;
		margin-bottom: $x-space-lg;
		margin-right: 0;
		margin-left: 0 ;
	}
	
	max-width: 100%;
	width: 100%;

	p {	
		margin: 0; 
		padding: $x-space-xs $x-space-sm;
//		font-size: $x-font-size-base;
	}
	
	&.is-large, &.is-style-large {
		padding-left: $x-space-md;
		p {
			font-size: $x-font-size-lg;
			padding-left: 1em;
			line-height: $x-font-family-heading;
		}
		
		p, cite {
			padding-left: 0;
		}
		
		cite {
			font-size: calc( #{$x-font-size-md} * 0.92 );
		}

	}

	cite {
		font-family: $x-font-family-heading;
		font-size: $x-font-size-sm;
		color: $x-color-words-subtle;
		padding: 0 $x-space-sm;
		font-style: normal;
		font-weight: 500;
	}

	@include media( tablet ) {
		max-width: $x-grid-column-7;
		margin-right: $x-grid-column-3;
		margin-left: auto;
	}
}

.wp-block-pullquote {

	margin-top: $x-space-lg;
	margin-bottom: $x-space-lg;
	text-align: inherit;
	padding: 0;
	
	p {
		margin: 0; 
		font-size: $x-font-size-md;
	}

	&.is-large p,
	&.is-style-large p {
		font-size: $x-font-size-lg;
		line-height: $x-font-leading-heading;
	}

	blockquote,
	& > p,
	& > cite {
		padding-left: $x-space-sm;
		padding-right: $x-space-sm;
	}
	
	
	&.is-style-solid-color blockquote {
		max-width: 100%;
	}

	&.alignwide,
	&.alignfull {
		
		blockquote,
		& > p,
		& > cite {

			@include media( tablet ) {
				padding-left: $grid-gutter;
				padding-right: $grid-gutter;
			}
		}
	}

	&.alignleft,
	&.alignright {
		margin-top: 0;
		margin-bottom: $x-space-sm;

		blockquote {
			margin-top: 0;
			margin-bottom: 0;
			p {
				padding-top: 0;
			}
		}
	}

	& > p:first-child {
		margin-top: 0;
	}
	
	&.alignfull {
		max-width: calc( 100vw - 2em ) !important;
	}
}

// !Separators

.wp-block-separator {
	margin-top: $x-space-md !important;
	margin-bottom: $x-space-md !important;
	padding: 0;
	width: 100px;
	
	&.is-style-wide {
		width: 100%;
	}

	&.is-style-dots {
		background-color: $x-color-shade-white;
		width: auto;

		&:before {
			content: "\00b7 \00b7 \00b7 \00b7 \00b7";
			color: $x-color-shade-gray-4;
			font-family: $body-font; /* family@include globalvar(font-family, body); */
			font-size: $x-font-size-lg;
			letter-spacing: 1em;
			padding-left: 1em;
		}
	}

	@include media( tablet ) {
		&.is-style-dots {
			max-width: $x-grid-column-6;
		}
	}
}

// !File Block

.wp-block-file {
	
	> a:first-child {
		color: inherit;
		box-shadow: none;
		&:hover {
			text-decoration: underline;
		}
	}
	
	&.aligncenter, &.alignfull, &.alignwide {
		text-align: center;
	}
	
	&.alignfull {
		@include media(tablet) {
			padding: 0 $x-space-sm;
		}
	}
	
}


// !Gallery Block

.wp-block-gallery .blocks-gallery-image figcaption,
.wp-block-gallery .blocks-gallery-item figcaption {
	display: inline-block;
	padding: $x-space-xxs;
	font-size: $x-font-size-sm;
	font-style: italic;
}

.wp-block-embed {
	&.alignwide, &.alignfull, &.aligncenter {
		iframe {
			margin: 0 auto !important;
		}
	}
}

